# sortient-plant-integration

./: README.md  pyproject.toml
docs/wiki/: Analytics.md  Overview.md  Robotics.md  Simulation.md
examples/: materials_catalog.csv  sample_config.yaml
plant_integration/: __init__.py  config.py
plant_integration/ai/: detector.py
plant_integration/analytics/: metrics.py
plant_integration/data/: structures.py
plant_integration/integration/: planner.py  standards.py
plant_integration/pipeline/: controller.py
plant_integration/robotics/: command_stream.py  interfaces.py
plant_integration/simulation/: facility.py
plant_integration/utils/: logging.py
scripts/: run_pipeline.py
tests/: test_analytics.py  test_config.py  test_planner.py  test_robotics.py  test_simulation.py
